kubernetes/apps/flux-system/flux-webhook/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
spec:
  ingressClassName: external
  rules:
    - host: flux-webhook.serek.xyz
      http:
        paths:
          - backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
            path: /hook/
            pathType: Prefix
